phase3new/source.output
Terminals unused in grammar

   LO
   HI


Grammar

    0 $accept: Program $end

    1 Functions: %empty
    2          | Functions Function

    3 Declarations: %empty
    4             | Declarations Declaration

    5 ParamDeclarations: %empty
    6                  | ParamDeclarations ParamDeclaration

    7 Statements: Statement ';'
    8           | Statements Statement ';'

    9 IDs: ID
   10    | IDs ',' ID

   11 Vars: Var
   12     | Vars ',' Var

   13 Expressions: %empty
   14            | NonemptyExpressionList

   15 NonemptyExpressionList: Expression
   16                       | NonemptyExpressionList ',' Expression

   17 Program: Functions

   18 Function: FUNCTION ID ';' BEGINPARAMS ParamDeclarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

   19 Declaration: IDs ':' INTEGER ';'
   20            | IDs ':' ARRAY '[' NUMBER ']' OF INTEGER ';'

   21 ParamDeclaration: IDs ':' INTEGER ';'
   22                 | IDs ':' ARRAY '[' NUMBER ']' OF INTEGER ';'

   23 Statement: Var ASSGN Expression
   24          | IF BoolExpr THEN Statements ENDIF
   25          | IF BoolExpr THEN Statements ELSE Statements ENDIF
   26          | WHILE BoolExpr Beginloop Statements ENDLOOP
   27          | DO Beginloop Statements ENDLOOP WHILE BoolExpr
   28          | READ Vars
   29          | WRITE Vars
   30          | CONTINUE
   31          | RETURN Expression

   32 Beginloop: BEGINLOOP

   33 BoolExpr: Expression EQ Expression
   34         | Expression NE Expression
   35         | Expression LT Expression
   36         | Expression GT Expression
   37         | Expression LE Expression
   38         | Expression GE Expression
   39         | BoolExpr AND BoolExpr
   40         | BoolExpr OR BoolExpr
   41         | NOT BoolExpr
   42         | TRUE
   43         | FALSE
   44         | '(' BoolExpr ')'

   45 Expression: Var
   46           | NUMBER
   47           | '(' Expression ')'
   48           | ID '(' Expressions ')'
   49           | Expression '+' Expression
   50           | Expression '-' Expression
   51           | Expression '*' Expression
   52           | Expression '/' Expression
   53           | Expression '%' Expression
   54           | '-' Expression

   55 Var: ID
   56    | ID '[' Expression ']'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 53
'(' (40) 44 47 48
')' (41) 44 47 48
'*' (42) 51
'+' (43) 49
',' (44) 10 12 16
'-' (45) 50 54
'/' (47) 52
':' (58) 19 20 21 22
';' (59) 7 8 18 19 20 21 22
'[' (91) 20 22 56
']' (93) 20 22 56
error (256)
LO (258)
INTEGER (259) 19 20 21 22
ARRAY (260) 20 22
FUNCTION (261) 18
BEGINPARAMS (262) 18
ENDPARAMS (263) 18
BEGINLOCALS (264) 18
ENDLOCALS (265) 18
BEGINBODY (266) 18
ENDBODY (267) 18
BEGINLOOP (268) 32
ENDLOOP (269) 26 27
IF (270) 24 25
THEN (271) 24 25
ELSE (272) 25
ENDIF (273) 24 25
DO (274) 27
WHILE (275) 26 27
READ (276) 28
WRITE (277) 29
CONTINUE (278) 30
RETURN (279) 31
TRUE (280) 42
FALSE (281) 43
ASSGN (282) 23
OF (283) 20 22
OR (284) 40
AND (285) 39
NOT (286) 41
NE (287) 34
EQ (288) 33
GE (289) 38
GT (290) 36
LE (291) 37
LT (292) 35
UMINUS (293)
HI (294)
ID (295) 9 10 18 48 55 56
NUMBER (296) 20 22 46


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
Functions (55)
    on left: 1 2, on right: 2 17
Declarations (56)
    on left: 3 4, on right: 4 18
ParamDeclarations (57)
    on left: 5 6, on right: 6 18
Statements (58)
    on left: 7 8, on right: 8 18 24 25 26 27
IDs (59)
    on left: 9 10, on right: 10 19 20 21 22
Vars (60)
    on left: 11 12, on right: 12 28 29
Expressions (61)
    on left: 13 14, on right: 48
NonemptyExpressionList (62)
    on left: 15 16, on right: 14 16
Program (63)
    on left: 17, on right: 0
Function (64)
    on left: 18, on right: 2
Declaration (65)
    on left: 19 20, on right: 4
ParamDeclaration (66)
    on left: 21 22, on right: 6
Statement (67)
    on left: 23 24 25 26 27 28 29 30 31, on right: 7 8
Beginloop (68)
    on left: 32, on right: 26 27
BoolExpr (69)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44, on right: 24 25 26
    27 39 40 41 44
Expression (70)
    on left: 45 46 47 48 49 50 51 52 53 54, on right: 15 16 23 31 33
    34 35 36 37 38 47 49 50 51 52 53 54 56
Var (71)
    on left: 55 56, on right: 11 12 23 45


State 0

    0 $accept: . Program $end

    $default  reduce using rule 1 (Functions)

    Functions  go to state 1
    Program    go to state 2


State 1

    2 Functions: Functions . Function
   17 Program: Functions .

    FUNCTION  shift, and go to state 3

    $default  reduce using rule 17 (Program)

    Function  go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

   18 Function: FUNCTION . ID ';' BEGINPARAMS ParamDeclarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    ID  shift, and go to state 6


State 4

    2 Functions: Functions Function .

    $default  reduce using rule 2 (Functions)


State 5

    0 $accept: Program $end .

    $default  accept


State 6

   18 Function: FUNCTION ID . ';' BEGINPARAMS ParamDeclarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    ';'  shift, and go to state 7


State 7

   18 Function: FUNCTION ID ';' . BEGINPARAMS ParamDeclarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    BEGINPARAMS  shift, and go to state 8


State 8

   18 Function: FUNCTION ID ';' BEGINPARAMS . ParamDeclarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    $default  reduce using rule 5 (ParamDeclarations)

    ParamDeclarations  go to state 9


State 9

    6 ParamDeclarations: ParamDeclarations . ParamDeclaration
   18 Function: FUNCTION ID ';' BEGINPARAMS ParamDeclarations . ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    ENDPARAMS  shift, and go to state 10
    ID         shift, and go to state 11

    IDs               go to state 12
    ParamDeclaration  go to state 13


State 10

   18 Function: FUNCTION ID ';' BEGINPARAMS ParamDeclarations ENDPARAMS . BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    BEGINLOCALS  shift, and go to state 14


State 11

    9 IDs: ID .

    $default  reduce using rule 9 (IDs)


State 12

   10 IDs: IDs . ',' ID
   21 ParamDeclaration: IDs . ':' INTEGER ';'
   22                 | IDs . ':' ARRAY '[' NUMBER ']' OF INTEGER ';'

    ','  shift, and go to state 15
    ':'  shift, and go to state 16


State 13

    6 ParamDeclarations: ParamDeclarations ParamDeclaration .

    $default  reduce using rule 6 (ParamDeclarations)


State 14

   18 Function: FUNCTION ID ';' BEGINPARAMS ParamDeclarations ENDPARAMS BEGINLOCALS . Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    $default  reduce using rule 3 (Declarations)

    Declarations  go to state 17


State 15

   10 IDs: IDs ',' . ID

    ID  shift, and go to state 18


State 16

   21 ParamDeclaration: IDs ':' . INTEGER ';'
   22                 | IDs ':' . ARRAY '[' NUMBER ']' OF INTEGER ';'

    INTEGER  shift, and go to state 19
    ARRAY    shift, and go to state 20


State 17

    4 Declarations: Declarations . Declaration
   18 Function: FUNCTION ID ';' BEGINPARAMS ParamDeclarations ENDPARAMS BEGINLOCALS Declarations . ENDLOCALS BEGINBODY Statements ENDBODY

    ENDLOCALS  shift, and go to state 21
    ID         shift, and go to state 11

    IDs          go to state 22
    Declaration  go to state 23


State 18

   10 IDs: IDs ',' ID .

    $default  reduce using rule 10 (IDs)


State 19

   21 ParamDeclaration: IDs ':' INTEGER . ';'

    ';'  shift, and go to state 24


State 20

   22 ParamDeclaration: IDs ':' ARRAY . '[' NUMBER ']' OF INTEGER ';'

    '['  shift, and go to state 25


State 21

   18 Function: FUNCTION ID ';' BEGINPARAMS ParamDeclarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS . BEGINBODY Statements ENDBODY

    BEGINBODY  shift, and go to state 26


State 22

   10 IDs: IDs . ',' ID
   19 Declaration: IDs . ':' INTEGER ';'
   20            | IDs . ':' ARRAY '[' NUMBER ']' OF INTEGER ';'

    ','  shift, and go to state 15
    ':'  shift, and go to state 27


State 23

    4 Declarations: Declarations Declaration .

    $default  reduce using rule 4 (Declarations)


State 24

   21 ParamDeclaration: IDs ':' INTEGER ';' .

    $default  reduce using rule 21 (ParamDeclaration)


State 25

   22 ParamDeclaration: IDs ':' ARRAY '[' . NUMBER ']' OF INTEGER ';'

    NUMBER  shift, and go to state 28


State 26

   18 Function: FUNCTION ID ';' BEGINPARAMS ParamDeclarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY . Statements ENDBODY

    IF        shift, and go to state 29
    DO        shift, and go to state 30
    WHILE     shift, and go to state 31
    READ      shift, and go to state 32
    WRITE     shift, and go to state 33
    CONTINUE  shift, and go to state 34
    RETURN    shift, and go to state 35
    ID        shift, and go to state 36

    Statements  go to state 37
    Statement   go to state 38
    Var         go to state 39


State 27

   19 Declaration: IDs ':' . INTEGER ';'
   20            | IDs ':' . ARRAY '[' NUMBER ']' OF INTEGER ';'

    INTEGER  shift, and go to state 40
    ARRAY    shift, and go to state 41


State 28

   22 ParamDeclaration: IDs ':' ARRAY '[' NUMBER . ']' OF INTEGER ';'

    ']'  shift, and go to state 42


State 29

   24 Statement: IF . BoolExpr THEN Statements ENDIF
   25          | IF . BoolExpr THEN Statements ELSE Statements ENDIF

    TRUE    shift, and go to state 43
    FALSE   shift, and go to state 44
    NOT     shift, and go to state 45
    '-'     shift, and go to state 46
    '('     shift, and go to state 47
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    BoolExpr    go to state 50
    Expression  go to state 51
    Var         go to state 52


State 30

   27 Statement: DO . Beginloop Statements ENDLOOP WHILE BoolExpr

    BEGINLOOP  shift, and go to state 53

    Beginloop  go to state 54


State 31

   26 Statement: WHILE . BoolExpr Beginloop Statements ENDLOOP

    TRUE    shift, and go to state 43
    FALSE   shift, and go to state 44
    NOT     shift, and go to state 45
    '-'     shift, and go to state 46
    '('     shift, and go to state 47
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    BoolExpr    go to state 55
    Expression  go to state 51
    Var         go to state 52


State 32

   28 Statement: READ . Vars

    ID  shift, and go to state 36

    Vars  go to state 56
    Var   go to state 57


State 33

   29 Statement: WRITE . Vars

    ID  shift, and go to state 36

    Vars  go to state 58
    Var   go to state 57


State 34

   30 Statement: CONTINUE .

    $default  reduce using rule 30 (Statement)


State 35

   31 Statement: RETURN . Expression

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 60
    Var         go to state 52


State 36

   55 Var: ID .
   56    | ID . '[' Expression ']'

    '['  shift, and go to state 61

    $default  reduce using rule 55 (Var)


State 37

    8 Statements: Statements . Statement ';'
   18 Function: FUNCTION ID ';' BEGINPARAMS ParamDeclarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements . ENDBODY

    ENDBODY   shift, and go to state 62
    IF        shift, and go to state 29
    DO        shift, and go to state 30
    WHILE     shift, and go to state 31
    READ      shift, and go to state 32
    WRITE     shift, and go to state 33
    CONTINUE  shift, and go to state 34
    RETURN    shift, and go to state 35
    ID        shift, and go to state 36

    Statement  go to state 63
    Var        go to state 39


State 38

    7 Statements: Statement . ';'

    ';'  shift, and go to state 64


State 39

   23 Statement: Var . ASSGN Expression

    ASSGN  shift, and go to state 65


State 40

   19 Declaration: IDs ':' INTEGER . ';'

    ';'  shift, and go to state 66


State 41

   20 Declaration: IDs ':' ARRAY . '[' NUMBER ']' OF INTEGER ';'

    '['  shift, and go to state 67


State 42

   22 ParamDeclaration: IDs ':' ARRAY '[' NUMBER ']' . OF INTEGER ';'

    OF  shift, and go to state 68


State 43

   42 BoolExpr: TRUE .

    $default  reduce using rule 42 (BoolExpr)


State 44

   43 BoolExpr: FALSE .

    $default  reduce using rule 43 (BoolExpr)


State 45

   41 BoolExpr: NOT . BoolExpr

    TRUE    shift, and go to state 43
    FALSE   shift, and go to state 44
    NOT     shift, and go to state 45
    '-'     shift, and go to state 46
    '('     shift, and go to state 47
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    BoolExpr    go to state 69
    Expression  go to state 51
    Var         go to state 52


State 46

   54 Expression: '-' . Expression

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 70
    Var         go to state 52


State 47

   44 BoolExpr: '(' . BoolExpr ')'
   47 Expression: '(' . Expression ')'

    TRUE    shift, and go to state 43
    FALSE   shift, and go to state 44
    NOT     shift, and go to state 45
    '-'     shift, and go to state 46
    '('     shift, and go to state 47
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    BoolExpr    go to state 71
    Expression  go to state 72
    Var         go to state 52


State 48

   48 Expression: ID . '(' Expressions ')'
   55 Var: ID .
   56    | ID . '[' Expression ']'

    '['  shift, and go to state 61
    '('  shift, and go to state 73

    $default  reduce using rule 55 (Var)


State 49

   46 Expression: NUMBER .

    $default  reduce using rule 46 (Expression)


State 50

   24 Statement: IF BoolExpr . THEN Statements ENDIF
   25          | IF BoolExpr . THEN Statements ELSE Statements ENDIF
   39 BoolExpr: BoolExpr . AND BoolExpr
   40         | BoolExpr . OR BoolExpr

    THEN  shift, and go to state 74
    OR    shift, and go to state 75
    AND   shift, and go to state 76


State 51

   33 BoolExpr: Expression . EQ Expression
   34         | Expression . NE Expression
   35         | Expression . LT Expression
   36         | Expression . GT Expression
   37         | Expression . LE Expression
   38         | Expression . GE Expression
   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression

    NE   shift, and go to state 77
    EQ   shift, and go to state 78
    GE   shift, and go to state 79
    GT   shift, and go to state 80
    LE   shift, and go to state 81
    LT   shift, and go to state 82
    '-'  shift, and go to state 83
    '+'  shift, and go to state 84
    '%'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87


State 52

   45 Expression: Var .

    $default  reduce using rule 45 (Expression)


State 53

   32 Beginloop: BEGINLOOP .

    $default  reduce using rule 32 (Beginloop)


State 54

   27 Statement: DO Beginloop . Statements ENDLOOP WHILE BoolExpr

    IF        shift, and go to state 29
    DO        shift, and go to state 30
    WHILE     shift, and go to state 31
    READ      shift, and go to state 32
    WRITE     shift, and go to state 33
    CONTINUE  shift, and go to state 34
    RETURN    shift, and go to state 35
    ID        shift, and go to state 36

    Statements  go to state 88
    Statement   go to state 38
    Var         go to state 39


State 55

   26 Statement: WHILE BoolExpr . Beginloop Statements ENDLOOP
   39 BoolExpr: BoolExpr . AND BoolExpr
   40         | BoolExpr . OR BoolExpr

    BEGINLOOP  shift, and go to state 53
    OR         shift, and go to state 75
    AND        shift, and go to state 76

    Beginloop  go to state 89


State 56

   12 Vars: Vars . ',' Var
   28 Statement: READ Vars .

    ','  shift, and go to state 90

    $default  reduce using rule 28 (Statement)


State 57

   11 Vars: Var .

    $default  reduce using rule 11 (Vars)


State 58

   12 Vars: Vars . ',' Var
   29 Statement: WRITE Vars .

    ','  shift, and go to state 90

    $default  reduce using rule 29 (Statement)


State 59

   47 Expression: '(' . Expression ')'

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 91
    Var         go to state 52


State 60

   31 Statement: RETURN Expression .
   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression

    '-'  shift, and go to state 83
    '+'  shift, and go to state 84
    '%'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87

    $default  reduce using rule 31 (Statement)


State 61

   56 Var: ID '[' . Expression ']'

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 92
    Var         go to state 52


State 62

   18 Function: FUNCTION ID ';' BEGINPARAMS ParamDeclarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY .

    $default  reduce using rule 18 (Function)


State 63

    8 Statements: Statements Statement . ';'

    ';'  shift, and go to state 93


State 64

    7 Statements: Statement ';' .

    $default  reduce using rule 7 (Statements)


State 65

   23 Statement: Var ASSGN . Expression

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 94
    Var         go to state 52


State 66

   19 Declaration: IDs ':' INTEGER ';' .

    $default  reduce using rule 19 (Declaration)


State 67

   20 Declaration: IDs ':' ARRAY '[' . NUMBER ']' OF INTEGER ';'

    NUMBER  shift, and go to state 95


State 68

   22 ParamDeclaration: IDs ':' ARRAY '[' NUMBER ']' OF . INTEGER ';'

    INTEGER  shift, and go to state 96


State 69

   39 BoolExpr: BoolExpr . AND BoolExpr
   40         | BoolExpr . OR BoolExpr
   41         | NOT BoolExpr .

    $default  reduce using rule 41 (BoolExpr)


State 70

   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression
   54           | '-' Expression .

    $default  reduce using rule 54 (Expression)


State 71

   39 BoolExpr: BoolExpr . AND BoolExpr
   40         | BoolExpr . OR BoolExpr
   44         | '(' BoolExpr . ')'

    OR   shift, and go to state 75
    AND  shift, and go to state 76
    ')'  shift, and go to state 97


State 72

   33 BoolExpr: Expression . EQ Expression
   34         | Expression . NE Expression
   35         | Expression . LT Expression
   36         | Expression . GT Expression
   37         | Expression . LE Expression
   38         | Expression . GE Expression
   47 Expression: '(' Expression . ')'
   49           | Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression

    NE   shift, and go to state 77
    EQ   shift, and go to state 78
    GE   shift, and go to state 79
    GT   shift, and go to state 80
    LE   shift, and go to state 81
    LT   shift, and go to state 82
    '-'  shift, and go to state 83
    '+'  shift, and go to state 84
    '%'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87
    ')'  shift, and go to state 98


State 73

   48 Expression: ID '(' . Expressions ')'

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    $default  reduce using rule 13 (Expressions)

    Expressions             go to state 99
    NonemptyExpressionList  go to state 100
    Expression              go to state 101
    Var                     go to state 52


State 74

   24 Statement: IF BoolExpr THEN . Statements ENDIF
   25          | IF BoolExpr THEN . Statements ELSE Statements ENDIF

    IF        shift, and go to state 29
    DO        shift, and go to state 30
    WHILE     shift, and go to state 31
    READ      shift, and go to state 32
    WRITE     shift, and go to state 33
    CONTINUE  shift, and go to state 34
    RETURN    shift, and go to state 35
    ID        shift, and go to state 36

    Statements  go to state 102
    Statement   go to state 38
    Var         go to state 39


State 75

   40 BoolExpr: BoolExpr OR . BoolExpr

    TRUE    shift, and go to state 43
    FALSE   shift, and go to state 44
    NOT     shift, and go to state 45
    '-'     shift, and go to state 46
    '('     shift, and go to state 47
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    BoolExpr    go to state 103
    Expression  go to state 51
    Var         go to state 52


State 76

   39 BoolExpr: BoolExpr AND . BoolExpr

    TRUE    shift, and go to state 43
    FALSE   shift, and go to state 44
    NOT     shift, and go to state 45
    '-'     shift, and go to state 46
    '('     shift, and go to state 47
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    BoolExpr    go to state 104
    Expression  go to state 51
    Var         go to state 52


State 77

   34 BoolExpr: Expression NE . Expression

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 105
    Var         go to state 52


State 78

   33 BoolExpr: Expression EQ . Expression

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 106
    Var         go to state 52


State 79

   38 BoolExpr: Expression GE . Expression

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 107
    Var         go to state 52


State 80

   36 BoolExpr: Expression GT . Expression

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 108
    Var         go to state 52


State 81

   37 BoolExpr: Expression LE . Expression

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 109
    Var         go to state 52


State 82

   35 BoolExpr: Expression LT . Expression

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 110
    Var         go to state 52


State 83

   50 Expression: Expression '-' . Expression

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 111
    Var         go to state 52


State 84

   49 Expression: Expression '+' . Expression

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 112
    Var         go to state 52


State 85

   53 Expression: Expression '%' . Expression

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 113
    Var         go to state 52


State 86

   52 Expression: Expression '/' . Expression

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 114
    Var         go to state 52


State 87

   51 Expression: Expression '*' . Expression

    '-'     shift, and go to state 46
    '('     shift, and go to state 59
    ID      shift, and go to state 48
    NUMBER  shift, and go to state 49

    Expression  go to state 115
    Var         go to state 52


State 88

    8 Statements: Statements . Statement ';'
   27 Statement: DO Beginloop Statements . ENDLOOP WHILE BoolExpr

    ENDLOOP   shift, and go to state 116
    IF        shift, and go to state 29
    DO        shift, and go to state 30
    WHILE     shift, and go to state 31
    READ      shift, and go to state 32
    WRITE     shift, and go to state 33
    CONTINUE  shift, and go to state 34
    RETURN    shift, and go to state 35
    ID        shift, and go to state 36

    Statement  go to state 63
    Var        go to state 39


State 89

   26 Statement: WHILE BoolExpr Beginloop . Statements ENDLOOP

    IF        shift, and go to state 29
    DO        shift, and go to state 30
    WHILE     shift, and go to state 31
    READ      shift, and go to state 32
    WRITE     shift, and go to state 33
    CONTINUE  shift, and go to state 34
    RETURN    shift, and go to state 35
    ID        shift, and go to state 36

    Statements  go to state 117
    Statement   go to state 38
    Var         go to state 39


State 90

   12 Vars: Vars ',' . Var

    ID  shift, and go to state 36

    Var  go to state 118


State 91

   47 Expression: '(' Expression . ')'
   49           | Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression

    '-'  shift, and go to state 83
    '+'  shift, and go to state 84
    '%'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87
    ')'  shift, and go to state 98


State 92

   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression
   56 Var: ID '[' Expression . ']'

    '-'  shift, and go to state 83
    '+'  shift, and go to state 84
    '%'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87
    ']'  shift, and go to state 119


State 93

    8 Statements: Statements Statement ';' .

    $default  reduce using rule 8 (Statements)


State 94

   23 Statement: Var ASSGN Expression .
   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression

    '-'  shift, and go to state 83
    '+'  shift, and go to state 84
    '%'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87

    $default  reduce using rule 23 (Statement)


State 95

   20 Declaration: IDs ':' ARRAY '[' NUMBER . ']' OF INTEGER ';'

    ']'  shift, and go to state 120


State 96

   22 ParamDeclaration: IDs ':' ARRAY '[' NUMBER ']' OF INTEGER . ';'

    ';'  shift, and go to state 121


State 97

   44 BoolExpr: '(' BoolExpr ')' .

    $default  reduce using rule 44 (BoolExpr)


State 98

   47 Expression: '(' Expression ')' .

    $default  reduce using rule 47 (Expression)


State 99

   48 Expression: ID '(' Expressions . ')'

    ')'  shift, and go to state 122


State 100

   14 Expressions: NonemptyExpressionList .
   16 NonemptyExpressionList: NonemptyExpressionList . ',' Expression

    ','  shift, and go to state 123

    $default  reduce using rule 14 (Expressions)


State 101

   15 NonemptyExpressionList: Expression .
   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression

    '-'  shift, and go to state 83
    '+'  shift, and go to state 84
    '%'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87

    $default  reduce using rule 15 (NonemptyExpressionList)


State 102

    8 Statements: Statements . Statement ';'
   24 Statement: IF BoolExpr THEN Statements . ENDIF
   25          | IF BoolExpr THEN Statements . ELSE Statements ENDIF

    IF        shift, and go to state 29
    ELSE      shift, and go to state 124
    ENDIF     shift, and go to state 125
    DO        shift, and go to state 30
    WHILE     shift, and go to state 31
    READ      shift, and go to state 32
    WRITE     shift, and go to state 33
    CONTINUE  shift, and go to state 34
    RETURN    shift, and go to state 35
    ID        shift, and go to state 36

    Statement  go to state 63
    Var        go to state 39


State 103

   39 BoolExpr: BoolExpr . AND BoolExpr
   40         | BoolExpr . OR BoolExpr
   40         | BoolExpr OR BoolExpr .

    AND  shift, and go to state 76

    $default  reduce using rule 40 (BoolExpr)


State 104

   39 BoolExpr: BoolExpr . AND BoolExpr
   39         | BoolExpr AND BoolExpr .
   40         | BoolExpr . OR BoolExpr

    $default  reduce using rule 39 (BoolExpr)


State 105

   34 BoolExpr: Expression NE Expression .
   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression

    '-'  shift, and go to state 83
    '+'  shift, and go to state 84
    '%'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87

    $default  reduce using rule 34 (BoolExpr)


State 106

   33 BoolExpr: Expression EQ Expression .
   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression

    '-'  shift, and go to state 83
    '+'  shift, and go to state 84
    '%'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87

    $default  reduce using rule 33 (BoolExpr)


State 107

   38 BoolExpr: Expression GE Expression .
   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression

    '-'  shift, and go to state 83
    '+'  shift, and go to state 84
    '%'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87

    $default  reduce using rule 38 (BoolExpr)


State 108

   36 BoolExpr: Expression GT Expression .
   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression

    '-'  shift, and go to state 83
    '+'  shift, and go to state 84
    '%'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87

    $default  reduce using rule 36 (BoolExpr)


State 109

   37 BoolExpr: Expression LE Expression .
   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression

    '-'  shift, and go to state 83
    '+'  shift, and go to state 84
    '%'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87

    $default  reduce using rule 37 (BoolExpr)


State 110

   35 BoolExpr: Expression LT Expression .
   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression

    '-'  shift, and go to state 83
    '+'  shift, and go to state 84
    '%'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87

    $default  reduce using rule 35 (BoolExpr)


State 111

   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   50           | Expression '-' Expression .
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression

    '+'  shift, and go to state 84
    '%'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87

    $default  reduce using rule 50 (Expression)


State 112

   49 Expression: Expression . '+' Expression
   49           | Expression '+' Expression .
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '%' Expression

    '%'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87

    $default  reduce using rule 49 (Expression)


State 113
